   as a mailbox. Please see the sip.conf.sample file for more information.
 * Added a function to remove SIP headers added in the dialplan before the
   first INVITE is generated - SIPRemoveHeader()
 * Channel variables set with setvar= in a device configuration is now 
   set both for inbound and outbound calls.
 * Added support for ITU G.722.1 and G.722.1C (Siren7 and Siren14) media streams.

Skinny Changes
--------------
 * The configuration file now holds separate sections for devices and lines.
   Please have a look at configs/skinny.conf.sample and change your skinny.conf
   accordingly.

DAHDI Changes
-------------
 * The UK option waitfordialtone has been added for use with BT analog
   lines.
 * Added a 'faxbuffers' configuration option to chan_dahdi.conf.  This option
   is used in conjunction with the 'faxdetect' configuration option.  When
   'faxbuffers' is used and fax tones are detected, the channel will dynamically
   switch to the configured faxbuffers policy.  For example, to use 6 buffers
   and a 'full' buffer policy for a fax transmission, add:
     faxbuffers=>6,full
   The faxbuffers configuration will be in affect until the call is torn down.

Dialplan Functions
------------------
 * Added a new dialplan function, CURLOPT, which permits setting various
   options that may be useful with the CURL dialplan function, such as
   cookies, proxies, connection timeouts, passwords, etc.
 * Permit the syntax and synopsis fields of the corresponding dialplan
   functions to be individually set from func_odbc.conf.
 * Added debugging CLI functions to func_odbc, 'odbc read' and 'odbc write'.
 * func_odbc now may specify an insert query to execute, when the write query
   affects 0 rows (usually indicating that no such row exists).
 * Added a new dialplan function, LISTFILTER, which permits removing elements
   from a set list, by name.  Uses the same general syntax as the existing CUT
   and FIELDQTY dialplan functions, which also manage lists.